[gd_scene load_steps=2 format=3 uid="uid://darfr7m3hlmyd"]

[ext_resource type="Script" uid="uid://x08kkmt6mjpr" path="res://ui/villager_detail_view.gd" id="1_aqk3f"]

[node name="VillagerDetailView" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aqk3f")

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Frame" type="PanelContainer" parent="Dim"]
custom_minimum_size = Vector2(1100, 720)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1100.0
offset_bottom = 720.0
grow_horizontal = 0

[node name="Margin" type="MarginContainer" parent="Dim/Frame"]
layout_mode = 2

[node name="Tabs" type="TabContainer" parent="Dim/Frame/Margin"]
layout_mode = 2
current_tab = 0

[node name="Skills" type="VBoxContainer" parent="Dim/Frame/Margin/Tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="SkillsHeader" type="HBoxContainer" parent="Dim/Frame/Margin/Tabs/Skills"]
layout_mode = 2

[node name="SkillsGrid" type="GridContainer" parent="Dim/Frame/Margin/Tabs/Skills/SkillsHeader"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 6

[node name="Attributes" type="VBoxContainer" parent="Dim/Frame/Margin/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="AttrList" type="VBoxContainer" parent="Dim/Frame/Margin/Tabs/Attributes"]
layout_mode = 2

[node name="Equipment" type="VBoxContainer" parent="Dim/Frame/Margin/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="EquipSlots" type="GridContainer" parent="Dim/Frame/Margin/Tabs/Equipment"]
layout_mode = 2
columns = 4

[node name="EquipInfo" type="RichTextLabel" parent="Dim/Frame/Margin/Tabs/Equipment"]
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="Dim/Frame/Margin/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="StatsList" type="VBoxContainer" parent="Dim/Frame/Margin/Tabs/Stats"]
layout_mode = 2
